# StarShop-Contracts

./: Cargo.toml  Deployments.md
StarShopContracts/nft-contract/: README.md
StarShopContracts/nft-fungible-batch-contract/: Cargo.toml  README.md
StarShopContracts/nft-fungible-batch-contract/src/: events.rs  lib.rs  mint.rs  roles.rs  storage.rs  transfer.rs
StarShopContracts/product-voting-contract/src/: lib.rs  limits.rs  ranking.rs  test.rs  types.rs  vote.rs
StarShopContracts/promotion-nft-contract/: Cargo.toml
StarShopContracts/promotion-nft-contract/src/: lib.rs  metadata.rs  mint.rs  redeem.rs  roles.rs  storage.rs  test.rs
StarShopContracts/promotional-boost-contract/src/: payments.rs
StarShopContracts/referral-contract/: PR_DESCRIPTION.md
StarShopContracts/referral-contract/audit/: AUDIT.md
StarShopContracts/referral-contract/src/: break_test.rs  lib.rs
StarShopContracts/referral-contract/test_snapshots/break_test/test_critical_auth_bypass_vulnerability/: test_critical_auth_bypass_add_milestone.1.json  test_critical_auth_bypass_pause_contract.1.json  test_critical_auth_bypass_set_reward_rates.1.json  test_critical_auth_bypass_transfer_admin.1.json  test_social_engineering_attack_scenario.1.json
StarShopContracts/referral-contract/test_snapshots/break_test/test_critical_level_manipulation_vulnerability/: test_critical_level_manipulation_vulnerability.1.json  test_different_address_can_update_level.1.json  test_level_manipulation_bypasses_all_checks.1.json  test_unauthorized_level_access.1.json
(+3 files in other folders)
