[package]
name = "promotion-nft-contract"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-tokens = "=0.4.0"
stellar-macros = "=0.4.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
