[package]
name = "promotion-nft-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-tokens = "=0.4.1"
stellar-macros = "=0.4.1"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
